# AntonyCFAV

./: README.md  gradle.properties  settings.gradle
antony_codec/: CMakeLists.txt  build.gradle
antony_codec/src/androidTest/java/com/codec/: ExampleInstrumentedTest.java
antony_codec/src/main/: AndroidManifest.xml
antony_codec/src/main/cpp/: encode_jpeg.cpp  encode_jpeg.h  encode_mp4.cpp  encode_mp4.h  encode_video.cpp  encode_video.h  loger.h  native_code.cpp  native_code.h  native_ffdecode_h264.c  native_ffencode_h264.c  nativie-lib.cpp
antony_codec/src/main/java/com/codec/: MainActivity.java
antony_codec/src/main/java/com/codec/activity/: CameraFFEncodeActivity.java  CameraV1FFEncodeActivity.java
antony_codec/src/main/java/com/codec/androidmedia/: AndroidRecordActivity.java  MediaExtractorActivity.java  PcmToWavUtil.java
antony_codec/src/main/java/com/codec/camera/: CameraV1.java
antony_codec/src/main/java/com/codec/ffcodec/: CameraV1.java  CodecHandleListener.java  CodecHandler.java  FFcodecNative.java  NativeEncoder.java
antony_codec/src/main/java/com/codec/ffmpegmedia/: CameraV1FFEncodeActivity.java  CameraV2FFEncodeActivity.java  FFDecodeH264ExampleActivity.java  FFEncodeH264ExampleActivity.java
antony_codec/src/main/java/com/codec/interfaca/: ICamera.java
antony_codec/src/main/java/com/codec/res_path/: ResPath.java
antony_codec/src/main/java/com/codec/view/: AutoFitTextureView.java
antony_codec/src/main/java/util/: FileUtil.java
antony_codec/src/main/res/layout/: activity_android_record.xml  activity_camera_encode.xml  activity_ffdecode_h264_example.xml  activity_ffencode_h264_example.xml  activity_main.xml  activity_media_extractor.xml
antony_codec/src/main/res/values/: strings.xml
antony_codec/src/test/java/com/codec/: ExampleUnitTest.java
antony_mianshi/: build.gradle
antonyopengl/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/antony/cfav/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_extract.c  audio_lame.c  audio_player.c  ffmpeg_cmd.c  ffmpeg_jni_define.h  media_encodec.c  native-lib.cpp  video_cut.c  video_extract_h264.c  video_format_conversion.c
app/src/main/cpp/ffmpeg/: ffmpeg.c  ffmpeg.h
app/src/main/java/com/antony/cfav/activity/: BaseActivity.java  MainActivity.java
app/src/main/java/com/antony/cfav/activity/audio/: AudioHandleActivity.java  AudioPlayer.java
app/src/main/java/com/antony/cfav/activity/camera/: CameraActivity.java
app/src/main/java/com/antony/cfav/activity/opengl/: CameraOpenGlPreviewActivity.java  OpenGlDemoActivity.java
app/src/main/java/com/antony/cfav/activity/video/: VideoHandleActivity.java  VideoPlayer.java
app/src/main/java/com/antony/cfav/camera2_opengl/: CaTwoRender.java  CaTwoSurfaceView.java
app/src/main/java/com/antony/cfav/dialog/: ConfirmationDialog.java  ErrorDialog.java  PermissionDialog.java
app/src/main/java/com/antony/cfav/ffmpeg/: FFmpegCmd.java  FFmpegHandler.java  FFmpegUtil.java
app/src/main/java/com/antony/cfav/fragment/: Camera2Fragment.java  GoogleCamera2BasicFragment.java
app/src/main/java/com/antony/cfav/listener/: OnHandleListener.java
app/src/main/java/com/antony/cfav/manager/: AudioRecordManager.java  AudioTrackManager.java
app/src/main/java/com/antony/cfav/opengl/: AnGLSurfaceView.java  AnRender.java  FboRender.java  MyEglHelper.java  ShaderUtil.java
app/src/main/java/com/antony/cfav/res_path/: ResPath.java
app/src/main/java/com/antony/cfav/view/: AutoFitTextureView.java
app/src/main/res/drawable/: permission_dialog_bg.xml
app/src/main/res/drawable-v24/: permission_dialog_one_btn_bg.xml
app/src/main/res/layout/: activity_audio_handle.xml  activity_camera.xml  activity_main.xml  activity_open_gl_demo.xml  activity_video_handle.xml  content_base.xml  fragment_camera2.xml  permission_dialog_layout.xml  permission_list_item.xml
app/src/main/res/layout-v21/: activity_camera_open_gl_preview.xml  fragment_camera2.xml
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/antony/cfav/: ExampleUnitTest.java
(+92 files in other folders)
